# GymPro

./: .gitignore  .replit  ai_functions.py  backup.sql  database_setup.py  gym_pro.db  main.py  manifest.json  pyproject.toml  replit.md  requirements.txt  sheety_bridge.py
attached_assets/: Pasted--I-want-to-upgrade-my-software-with-the-following-featu_1778373281754.txt
gym-app/: app.py  auth.py  database.py  gym_pro.db  gym_pro_v2.db  gym_pro_v3.db  mein .env  requirements.txt  styles.py  temp_audio.webm
gym-app/.streamlit/: config.toml
gym-app/gym-app/: gym_pro_v2.db  gym_pro_v3.db
gym-app/pages/: __init__.py  admin_dashboard.py  ai_assistant.py  ai_functions.py  attendance.py  auditor.py  expenses.py  fee_collection.py  inventory.py  members.py  membership_card.py  progress.py  reports.py  whatsapp.py
