[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "pydub>=0.25.1",          # Ye line add karein
    "SpeechRecognition>=3.10.0" # Ye line add karein
]
